objects/SummaryReport__c.object
<CustomObject>
    <description>https://imcdgroup.atlassian.net/browse/SFDP-1972 - Principal Report functionality</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Summary Reports</relationshipLabel>
        <relationshipName>SummaryReports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DebugInfo__c</fullName>
        <label>Debug Info</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose of Call</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ReportDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Default to Today&apos;s date.</inlineHelpText>
        <label>Report Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TF_AccountIMCDCompany__c</fullName>
        <description>Formula field to retrieve a text version of IMCDCompany on the Account</description>
        <formula>TEXT(Account__r.IMCDCompany__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TF_Account IMCDCompany</label>
        <type>Text</type>
    </fields>
    <label>Summary Report</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summary Reports</pluralLabel>
    <recordTypes>
        <fullName>Customer_Report</fullName>
        <active>true</active>
        <label>Customer Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>PrincipalReport</fullName>
        <active>true</active>
        <label>Principal Report</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>